; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sh2core.c_SH2DeInit.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_sh2core.c_SH2DeInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@SH2Core = common dso_local global %struct.TYPE_2__* null, align 8
@MSH2 = common dso_local global i32* null, align 8
@SSH2 = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SH2DeInit() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SH2Core, align 8
  %2 = icmp ne %struct.TYPE_2__* %1, null
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SH2Core, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32 (...)*, i32 (...)** %5, align 8
  %7 = call i32 (...) %6()
  br label %8

8:                                                ; preds = %3, %0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** @SH2Core, align 8
  %9 = load i32*, i32** @MSH2, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %8
  %12 = load i32*, i32** @MSH2, align 8
  %13 = call i32 @SH2TrackInfLoopDeInit(i32* %12)
  %14 = load i32*, i32** @MSH2, align 8
  %15 = call i32 @free(i32* %14)
  br label %16

16:                                               ; preds = %11, %8
  store i32* null, i32** @MSH2, align 8
  %17 = load i32*, i32** @SSH2, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %16
  %20 = load i32*, i32** @SSH2, align 8
  %21 = call i32 @SH2TrackInfLoopDeInit(i32* %20)
  %22 = load i32*, i32** @SSH2, align 8
  %23 = call i32 @free(i32* %22)
  br label %24

24:                                               ; preds = %19, %16
  store i32* null, i32** @SSH2, align 8
  ret void
}

declare dso_local i32 @SH2TrackInfLoopDeInit(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
